syntax = "proto3";

package j5.schema.v1;

option go_package = "github.com/pentops/jsonapi/gen/j5/v1/schema_j5pb";

message Schema {
  string description = 1;

  oneof type {
    // Special Cases
    string ref = 10;

    EmptySchemmaItem empty = 11;
    OneofWrapperItem oneof_wrapper = 12;
    // OneOf
    // AnyOf

    // Complex Types
    ArrayItem array_item = 20;
    ObjectItem object_item = 21;
    MapItem map_item = 22;

    // Scalar Types
    StringItem string_item = 30;
    IntegerItem integer_item = 31;
    EnumItem enum_item = 32;
    NumberItem number_item = 33;
    BooleanItem boolean_item = 34;
  }
}

message StringItem {
  optional string format = 1;
  optional string example = 2;
  StringRules rules = 3;
}

message StringRules {
  optional string pattern = 1;
  optional uint64 min_length = 2;
  optional uint64 max_length = 3;
}

message EnumItem {
  repeated Value options = 1;
  message Value {
    string name = 1;
    int32 number = 2;
    string description = 3;
  }
}

message NumberItem {
  string format = 1;
  NumberRules rules = 2;
}

message NumberRules {
  optional bool exclusive_maximum = 1;
  optional bool exclusive_minimum = 2;
  optional double minimum = 3;
  optional double maximum = 4;
  optional double multiple_of = 5;
}

message IntegerItem {
  string format = 1;
  IntegerRules rules = 2;
}

message IntegerRules {
  optional bool exclusive_maximum = 1;
  optional bool exclusive_minimum = 2;
  optional int64 minimum = 3;
  optional int64 maximum = 4;
  optional int64 multiple_of = 5;
}

message BooleanItem {
  BooleanRules rules = 1;
}

message BooleanRules {
  optional bool const = 1;
}

message ArrayItem {
  ArrayRules rules = 1;
  Schema items = 2;
}

message ArrayRules {
  optional uint64 min_items = 1;
  optional uint64 max_items = 2;
  optional bool unique_items = 3;
}

message ObjectProperty {
  Schema schema = 1;
  string name = 3;
  bool required = 4;
  bool explicitly_optional = 5;
  bool read_only = 6;
  bool write_only = 7;
  string description = 8;
  string proto_field_name = 9;
  int32 proto_field_number = 10;
}

message ObjectItem {
  ObjectRules rules = 1;
  repeated ObjectProperty properties = 2;
  bool additional_properties = 3;

  string proto_message_name = 4;
  string proto_full_name = 5;

  // TODO: These may not be appropriate
  string go_package_name = 6;
  string go_type_name = 7;
  string grpc_package_name = 8;
}

message ObjectRules {
  optional uint64 min_properties = 1;
  optional uint64 max_properties = 2;
}

// Similar to ObjectItem (it is an object in JSON Schema), but where exactly one
// property should be set
message OneofWrapperItem {
  OneofRules rules = 1;
  repeated ObjectProperty properties = 2;
  string proto_message_name = 4;
  string proto_full_name = 5;

  // TODO: These may not be appropriate
  string go_package_name = 6;
  string go_type_name = 7;
  string grpc_package_name = 8;
}

message OneofRules {}

message MapItem {
  Schema item_schema = 1;
  MapRules rules = 2;
}

message MapRules {}

// Allows anything
message EmptySchemmaItem {}
